--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -1,8 +1,11 @@
 .footer {
+    width: 100%;
     text-align: center;
-    margin: 16px 0;
+    padding: 16px 0;
+    margin: 0;
     color: gray;
     font-size: 14px;
+    background: #EEE;
 }
 
 .footer__link,
