--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,11 @@
+html, body, #root {
+    height: 100%;
+}
+
 body {
     font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
-    color: #111;
+    color: #333;
     background: #EEE;
 }
