--- a/src/components/app/index.css
+++ b/src/components/app/index.css
@@ -5,3 +5,29 @@
     flex-flow: column;
     justify-content: space-between;
 }
+
+.app__header {
+    min-height: 216px;
+    color: #000;
+    background-color: #C4C7CB;
+    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: calc(100% - 16px);
+    padding: 0 8px;
+}
+
+@media (min-width: 768px) {
+    .app {
+        padding-top: 72px;
+    }
+
+    .app__header {
+        min-height: 64px;
+        position: fixed;
+        top: 0;
+        flex-wrap: nowrap;
+    }
+}
