--- a/src/components/app/index.css
+++ b/src/components/app/index.css
@@ -9,7 +9,7 @@
 .app__header {
     min-height: 216px;
     color: #000;
-    background-color: #C4C7CB;
+    background-color: #FFF;
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
     display: flex;
     flex-wrap: wrap;
