--- a/src/components/filter-panel/index.css
+++ b/src/components/filter-panel/index.css
@@ -9,7 +9,7 @@
     padding: 8px 8px 8px 24px;
     line-height: 1.1875em;
     font-size: 16px;
-    background: rgba(255, 255, 255, 0.33);
+    background: rgba(0, 0, 0, 0.05);
     border: none;
     border-radius: 4px;
 }
@@ -32,6 +32,7 @@
 .filter-panel__select {
     width: 100%;
     text-transform: capitalize;
+    cursor: pointer;
 }
 
 @media (min-width: 768px) {
