--- a/src/components/modal/index.css
+++ b/src/components/modal/index.css
@@ -29,7 +29,6 @@
 }
 
 .modal__close-btn {
-    background: none;
     border: none;
     cursor: pointer;
     margin: 0;
@@ -41,9 +40,17 @@
     position: absolute;
     right: -24px;
     top: -24px;
-    outline: 0;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.25);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 1;
+    font-size: 18px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
 .modal__close-btn:hover {
     color: #C9C9C9;
+    background: rgba(255, 255, 255, 0.15);
 }
