--- a/src/components/sort-panel/index.css
+++ b/src/components/sort-panel/index.css
@@ -1,5 +1,5 @@
 .sort-panel__btn {
-    background: none;
+    background-color: rgba(0, 0, 0, 0.05);;
     cursor: pointer;
     margin: 0;
     padding: 8px 16px;
@@ -12,5 +12,5 @@
 }
 
 .sort-panel__btn:hover {
-    background-color: rgba(0, 0, 0, 0.08);
+    background-color: rgba(0, 0, 0, 0.1);
 }
