Fix responsiveness and cross-browser compatibility issues

--- a/src/components/article-list/index.css
+++ b/src/components/article-list/index.css
@@ -1,3 +1,7 @@
+.article-list__wrapper {
+    box-sizing: border-box;
+}
+
 .article_list {
     list-style: none;
     padding: 0;
@@ -11,4 +15,10 @@
 .no-articles-found {
     text-align: center;
     font-size: 22px;
+}
+
+@media (min-width: 768px) {
+    .article-list__wrapper {
+        padding: 64px 0 32px 0;
+    }
 }
