--- a/src/components/article-modal/index.css
+++ b/src/components/article-modal/index.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     width: 100%;
-    max-height: 35vh;
+    max-height: 25vh;
     overflow: hidden;
     text-align: center;
 }
@@ -36,4 +36,10 @@
     font-size: 12px;
     font-weight: bold;
     color: gray;
+}
+
+@media (min-height: 640px) {
+    .article-modal__picture {
+        max-height: 35vh;
+    }
 }
