--- a/src/components/filter-panel/index.css
+++ b/src/components/filter-panel/index.css
@@ -23,6 +23,7 @@
 .filter-panel__label {
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 }
 
 .filter-panel__label > span {
@@ -30,7 +31,7 @@
 }
 
 .filter-panel__select {
-    width: 100%;
+    width: 85%;
     text-transform: capitalize;
     cursor: pointer;
 }
