--- a/src/components/loader/index.css
+++ b/src/components/loader/index.css
@@ -1,6 +1,7 @@
 .loader {
     width: 100%;
     height: 100%;
+    min-height: 30vh;
     display: flex;
     justify-content: center;
     align-items: center;
