--- a/src/components/sort-panel/index.css
+++ b/src/components/sort-panel/index.css
@@ -1,5 +1,10 @@
+.sort-panel {
+    display: flex;
+    justify-content: flex-end;
+}
+
 .sort-panel__btn {
-    background-color: rgba(0, 0, 0, 0.05);;
+    background-color: rgba(0, 0, 0, 0.05);
     cursor: pointer;
     margin: 0;
     padding: 8px 16px;
