--- a/src/components/modal/index.css
+++ b/src/components/modal/index.css
@@ -36,21 +36,21 @@
     width: 24px;
     height: 24px;
     font-size: 20px;
-    color: #B9B9B9;
     position: absolute;
     right: -24px;
     top: -24px;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.25);
+    color: rgba(185, 185, 185, 1);
     display: flex;
     justify-content: center;
     align-items: center;
     line-height: 1;
     font-size: 18px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
 .modal__close-btn:hover {
-    color: #C9C9C9;
+    color: rgba(201, 201, 201, 1);
     background: rgba(255, 255, 255, 0.15);
 }
