--- a/src/components/sort-panel/index.css
+++ b/src/components/sort-panel/index.css
@@ -9,7 +9,8 @@
     margin: 0;
     padding: 8px 16px;
     min-width: 140px;
-    line-height: 1.5;
+    height: 35px;
+    margin: 8px 0;
     border-radius: 4px;
     white-space: nowrap;
     border: 1px solid rgba(0, 0, 0, 0.23);
